--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
   </head>
 
   <body>
-    <h1>Hello World, we are software developers!</h1>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
+    <header id="header">
+      <img id="header-img" src="./images/product-landing-page-logo.png" alt="product-landing-page-logo" width="200px"  />
+    </header>
+
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script src="js/index.js"></script>
   </body>
 </html>
