--- a/index.html
+++ b/index.html
@@ -7,9 +7,26 @@
   </head>
 
   <body>
-
     <header id="header">
-      <img id="header-img" src="./images/product-landing-page-logo.png" alt="product-landing-page-logo" width="200px"  />
+      <img
+        id="header-img"
+        src="./images/product-landing-page-logo.png"
+        alt="product-landing-page-logo"
+        width="200px"
+      />
+      <nav id="nav-bar">
+        <ul>
+          <li>
+            <a href="" class="nav-link">Features</a>
+          </li>
+          <li>
+            <a href="" class="nav-link">How It Works</a>
+          </li>
+          <li>
+            <a href="" class="nav-link">Pricing</a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
