--- a/index.html
+++ b/index.html
@@ -17,17 +17,26 @@
       <nav id="nav-bar">
         <ul>
           <li>
-            <a href="" class="nav-link">Features</a>
+            <a href="#features" class="nav-link">Features</a>
           </li>
           <li>
-            <a href="" class="nav-link">How It Works</a>
+            <a href="#how-it-works" class="nav-link">How It Works</a>
           </li>
           <li>
-            <a href="" class="nav-link">Pricing</a>
+            <a href="#pricing" class="nav-link">Pricing</a>
           </li>
         </ul>
       </nav>
     </header>
+
+    <section id="features">Feature</section>
+    <section id="how-it-works">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/ODqlW2OEss0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+      </iframe>
+    </section>
+    <section id="pricing">Pricing</section>
+
+
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script src="js/index.js"></script>
