Added email input and and email id

--- a/index.html
+++ b/index.html
@@ -29,14 +29,59 @@
       </nav>
     </header>
 
-    <section id="features">Feature</section>
+    <div>
+      <h1>Handcrafted, home-made masterpieces</h1>
+      <form id="form">
+        <input type="email" id="email" />
+      </form>
+    </div>
+
+    <section id="features">
+      <div>
+        <i>Icon</i>
+        <div>
+          <h2>Premium Materials</h2>
+          <p>
+            Our trombones use the shiniest brass which is sourced locally. This
+            will increase the longevity of your purchase.
+          </p>
+        </div>
+      </div>
+      <div>
+        <i>Icon</i>
+        <div>
+          <h2>Fast Shipping</h2>
+          <p>
+            We make sure you recieve your trombone as soon as we have finished
+            making it. We also provide free returns if you are not satisfied.
+          </p>
+        </div>
+      </div>
+      <div>
+        <i>Icon</i>
+        <div>
+          <h2>Quality Assurance</h2>
+          <p>
+            For every purchase you make, we will ensure there are no damages or
+            faults and we will check and test the pitch of your instrument.
+          </p>
+        </div>
+      </div>
+    </section>
+
     <section id="how-it-works">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/ODqlW2OEss0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/ODqlW2OEss0"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      >
       </iframe>
     </section>
     <section id="pricing">Pricing</section>
-
-
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script src="js/index.js"></script>
