--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div>
       <h1>Handcrafted, home-made masterpieces</h1>
       <form id="form">
-        <input type="email" id="email" />
+        <input type="email" id="email" placeholder="Enter your email address" required/>
       </form>
     </div>
 
