--- a/index.html
+++ b/index.html
@@ -31,8 +31,19 @@
 
     <div>
       <h1>Handcrafted, home-made masterpieces</h1>
-      <form id="form">
-        <input type="email" id="email" placeholder="Enter your email address" required/>
+      <form
+        id="form"
+        action="https://www.freecodecamp.com/email-submit"
+        method="POST"
+      >
+        <input
+          type="email"
+          id="email"
+          name="email"
+          placeholder="Enter your email address"
+          required
+        />
+        <input type="submit" id="submit" value="GET STARTED" />
       </form>
     </div>
 
@@ -71,6 +82,7 @@
 
     <section id="how-it-works">
       <iframe
+        id="video"
         width="560"
         height="315"
         src="https://www.youtube.com/embed/ODqlW2OEss0"
