made header to be positioned at the top

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fork Me! FCC: Test Suite Template</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -10,7 +12,7 @@
     <header id="header">
       <img
         id="header-img"
-        src="./images/product-landing-page-logo.png"
+        src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png"
         alt="product-landing-page-logo"
         width="200px"
       />
@@ -29,7 +31,7 @@
       </nav>
     </header>
 
-    <div>
+    <div id="heading">
       <h1>Handcrafted, home-made masterpieces</h1>
       <form
         id="form"
